--- a/src/navigate-livechat.scss
+++ b/src/navigate-livechat.scss
@@ -13,10 +13,7 @@
 
 .navigate-live-chat {
     font-family: 'Montserrat', sans-serif;
-    // max-width: 100vw;
     margin: 0;
-    // background-image: url("~/public/images/navigate-bg.svg");
-    // height: 900px;
 
     &.bg-1 {
         position: fixed;
@@ -49,6 +46,8 @@
       align-items: center;
       .center-content {
         height: 900px;
+        overflow-x: hidden;
+        overflow-y: auto;
       }
     }
 
@@ -160,7 +159,7 @@
       }
     }
         ::-webkit-scrollbar {
-        width: 4px;
+        width: 0px;
         border-radius: 5px;
       }
       
@@ -200,7 +199,7 @@
     }
     .action-group {
       width: 100%;
-      margin-bottom: 34px;
+      margin-bottom: 0;
       .button-group {
 
         width: 100%;
@@ -214,10 +213,6 @@
     }
 
     .footer {
-      // position: absolute;
-      // bottom: 0;
-      // width: 100%;
-      // margin-bottom: 4%;
       .content {
         font-family: Montserrat;
         font-size: 10px;
