Fix/[BC114103N-4253][Support Live Chat][Mobile Web][FE] Landscape: Thiếu art kim tuyến ở phần top trên logo
Fix/[BC114103N-4253][Support Live Chat][Mobile Web][FE] Landscape: Thiếu art kim tuyến ở phần top trên logo

--- a/src/navigate-livechat.scss
+++ b/src/navigate-livechat.scss
@@ -36,6 +36,7 @@
         background-size: cover;
         z-index: -1; /* Để đặt phía sau */
         object-fit: contain;
+        background-position: top;
       }
       
     .bg-2 {
