fix/[BC114103N-4250][Support Live Chat][iOS][FE] Background bị cắt hai bên cạnh khi ở mode Landscape
fix/[BC114103N-4250][Support Live Chat][iOS][FE] Background bị cắt hai bên cạnh khi ở mode Landscape

--- a/src/navigate-livechat.scss
+++ b/src/navigate-livechat.scss
@@ -11,6 +11,9 @@
   }
 }
 
+body {
+  background-color: #100903
+}
 .custom-tooltip .tooltip-inner {
   background-color: #120b05; /* Set background color */
   color: #e9c660; /* Set text color (optional) */
