fix/[BC114103N-4250][Support Live Chat][iOS][FE] Background bị cắt hai bên cạnh khi ở mode Landscape
fix/[BC114103N-4250][Support Live Chat][iOS][FE] Background bị cắt hai bên cạnh khi ở mode Landscape

--- a/src/navigate-livechat.scss
+++ b/src/navigate-livechat.scss
@@ -12,7 +12,7 @@
 }
 
 body {
-  background-color: #100903
+  background-color: #100903 !important
 }
 .custom-tooltip .tooltip-inner {
   background-color: #120b05; /* Set background color */
