--- a/src/navigate-livechat.scss
+++ b/src/navigate-livechat.scss
@@ -241,7 +241,7 @@ body {
           font-weight: 700;
           line-height: 18px;
           text-align: center;
-          
+          text-transform: uppercase;
           
         }
 
