--- a/src/navigate-livechat.scss
+++ b/src/navigate-livechat.scss
@@ -165,7 +165,7 @@ body {
           font-weight: 700;
           line-height: 24px;
           text-align: center;
-          
+          text-transform: uppercase;
           a {
             color: #FFE49E;
           }
